--- a/03 HelloUniform/03 HelloUniform.vcxproj
+++ b/03 HelloUniform/03 HelloUniform.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{90df2119-11a2-4201-a88b-c0cde7609d16}</ProjectGuid>
-    <RootNamespace>My02HelloTriangle</RootNamespace>
+    <ProjectGuid>{19954cee-247b-430b-9c57-15a4e1b740d3}</ProjectGuid>
+    <RootNamespace>My03HelloUniform</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -79,15 +79,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(ProjectDir)vertex.glsl" "$(OutputPath)02_vertex.glsl" /Y
-copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
+      <Command>copy "$(ProjectDir)vertex.glsl" "$(OutputPath)03_vertex.glsl" /Y
+copy "$(ProjectDir)fragment.glsl" "$(OutputPath)03_fragment.glsl" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -98,7 +98,7 @@ copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -107,8 +107,8 @@ copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(ProjectDir)vertex.glsl" "$(OutputPath)02_vertex.glsl" /Y
-copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
+      <Command>copy "$(ProjectDir)vertex.glsl" "$(OutputPath)03_vertex.glsl" /Y
+copy "$(ProjectDir)fragment.glsl" "$(OutputPath)03_fragment.glsl" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -117,15 +117,15 @@ copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(ProjectDir)vertex.glsl" "$(OutputPath)02_vertex.glsl" /Y
-copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
+      <Command>copy "$(ProjectDir)vertex.glsl" "$(OutputPath)03_vertex.glsl" /Y
+copy "$(ProjectDir)fragment.glsl" "$(OutputPath)03_fragment.glsl" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -136,7 +136,7 @@ copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -145,26 +145,16 @@ copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(ProjectDir)vertex.glsl" "$(OutputPath)02_vertex.glsl" /Y
-copy "$(ProjectDir)fragment.glsl" "$(OutputPath)02_fragment.glsl" /Y</Command>
+      <Command>copy "$(ProjectDir)vertex.glsl" "$(OutputPath)03_vertex.glsl" /Y
+copy "$(ProjectDir)fragment.glsl" "$(OutputPath)03_fragment.glsl" /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="fragment.glsl">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="vertex.glsl">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </None>
+    <None Include="fragment.glsl" />
+    <None Include="vertex.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
